tests/fails/e8_not_fully_covered.stderr
error[E0308]: mismatched types
  --> ../tests/fails/e8_not_fully_covered.rs:11:27
   |
11 |     let f = Failure::from(4);
   |             ------------- ^ expected `Failure`, found integer
   |             |
   |             arguments to this function are incorrect
   |
note: associated function defined here
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn from(value: T) -> Self;
   |        ^^^^
